Fri Dec 17 01:24:32 GMT 2004  Olly Betts <olly@survex.com>

	* perl/: Sanitise root parameter to all CGI scripts.  It should always
	  be of the form "root<number>".

Fri Dec 10 02:19:06 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Logo-script.pl: use strict; call handle IMG not GIF; better
	  error message.

Fri Dec 10 01:57:25 GMT 2004  Olly Betts <olly@survex.com>

	* db/Makefile.am: Build system changes to go with the previous change.

Thu Dec 09 17:50:17 GMT 2004  Olly Betts <olly@survex.com>

	* db/: Factored out duplicated stoplist code into stoplist.C and
	  stoplist.h; char * parameters -> const char * where appropriate;
	  local functions -> static; added missing space to usage message;
	  no need to explicitly flush Xapian db just before closing it.

Thu Dec 09 16:56:56 GMT 2004  Olly Betts <olly@survex.com>

	* README: Fixed a few inaccuracies.

Thu Dec 02 13:45:46 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Query-script.pl: Fix generated HTML; comment out link to the old
	  bug address.

Wed Dec 01 19:57:52 GMT 2004  Olly Betts <olly@survex.com>

	* db/cvscommitsearch.C: Commenting improvements.
	* db/lines_db.C: Use wc to count lines in the file.
	* db/util.C: Covert _ to / in get_packages.
	* perl/CommitSearch-script.pl: Lose the <TBODY> tag; more comments.

Wed May 12 20:41:44 BST 2004  Olly Betts <olly@survex.com>

	* map/process/Makefile.am: Add pstream.h to list of files to
	  distribute.

Sat Mar 27 17:44:41 GMT 2004  Olly Betts <olly@survex.com>

	* perl/CommitSearch-script.pl: Added "use strict" and fixed code to
	  match; tidied up indentation.

Sat Mar 27 17:07:17 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Query-script.pl: Fixed to output cvs revisions sorted
	  correctly.

Sat Mar 27 15:19:16 GMT 2004  Olly Betts <olly@survex.com>

	* amir/align.C,db/cvsrelatedindex.C,
	  map/map_algorithm/backward_map_algorithm.cpp: Cleaned up another
	  insecure temporary file creation, and flagged the last remaining